install-kubeflow/knative/auth-v2-renew/istio-ingressgateway-oauth2-proxy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-oauth2-proxy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
        - /api/server
        - /api/models
        - /api/models/*
        - /api/parameters
        - /api/validation
        - /api/analysis
        - /api/cancel
        - /api/cancel/*
    when:
    - key: request.headers[authorization]
      notValues:
      - '*'
