install-kubeflow/knative/auth-v2-renew/istio-ingressgateway-require-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-require-jwt
  namespace: istio-system
spec:
  action: DENY
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
    to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
        - /api/server
        - /api/models
        - /api/models/*
        - /api/parameters
        - /api/validation
        - /api/analysis
        - /api/cancel
        - /api/cancel/*
